<resources>
    <string name="app_name">Covid19Widget</string>
    <string name="confirmed">Confirmed</string>
    <string name="without_data">-</string>
    <string name="data_on_date">Data on date</string>
    <string name="country">Country</string>
    <string name="alert_title">Information</string>
    <string name="alert_message">If you want to display this information in a widget, then add a widget to home screen.</string>
    <string name="alert_button">OK</string>
    <string name="server_not_respond">Server does not respond</string>
    <string name="no_internet">No internet connection</string>
    <string name="select_the_country"><font size="14">Select the country to display in the widget</font></string>
    <string name="recovered">Recovered</string>
</resources>
