<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/background_cell_confirmed"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/type_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="11dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/confirmed"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_widget" />

                <TextView
                    android:id="@+id/change_count_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="11dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/without_data"
                    android:textColor="#f80606"
                    android:textSize="@dimen/change_number_widget" />

            </RelativeLayout>

            <TextView
                android:id="@+id/count_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/without_data"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_number_widget"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/background_cell_recovered"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/type_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="11dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/recovered"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_widget" />

                <TextView
                    android:id="@+id/change_count_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="11dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/without_data"
                    android:textColor="#f80606"
                    android:textSize="@dimen/change_number_widget" />

            </RelativeLayout>

            <TextView
                android:id="@+id/count_recovered"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/without_data"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_number_widget"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/data_on_date"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_widget"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/country"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_widget"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_widget" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>